--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hyeri-woo.github.io/wanted-pre-onboarding-frontend"
+  "homepage": "https://wantedtodo-hyeriwoo.netlify.app"
 }
